--- a/pages/translations/ar/LC_MESSAGES/messages.po
+++ b/pages/translations/ar/LC_MESSAGES/messages.po
@@ -3174,3 +3174,155 @@ msgstr "الآن هو الوقت المناسب للعمل."
 
 msgid "The sun is a star."
 msgstr "الشمس هو نجم."
+
+#: /content/amp-dev/index-2021.html:2
+msgid "Knowledge graph applications"
+msgstr "تطبيقات الرسم البياني المعرفي"
+
+#: /content/amp-dev/index-2021.html:10
+msgid "Electronic Labels"
+msgstr "التسميات الإلكترونية"
+
+#: /content/amp-dev/index-2021.html:11
+msgid "Creating electronic labels with detailed product information in machine-readable format for humans & other intelligent machines."
+msgstr "إنشاء ملصقات إلكترونية تحتوي على معلومات تفصيلية عن المنتج بتنسيق يمكن قراءته آليًا للبشر والأجهزة الذكية الأخرى."
+
+#: /content/amp-dev/index-2021.html:12
+msgid "All about Electronic Labels"
+msgstr "كل شيء عن الملصقات الإلكترونية"
+
+#: /content/amp-dev/index-2021.html:15
+msgid "Daily Food"
+msgstr "طعام يومي"
+
+#: /content/amp-dev/index-2021.html:16
+msgid "Serving detailed information about human food and meals, pet food and animal feed in machine-readable format. Storing intake history in your personal Biograph - companion to your Electronic Health Record."
+msgstr "تقديم معلومات تفصيلية عن أغذية ووجبات الإنسان وأغذية الحيوانات الأليفة والأعلاف الحيوانية بتنسيق يمكن قراءته آليًا. تخزين تاريخ تناول الطعام في سيرتك الذاتية الشخصية - رفيق لسجلك الصحي الإلكتروني."
+
+#: /content/amp-dev/index-2021.html:17
+msgid "All about Daily Food"
+msgstr "كل شيء عن الغذاء اليومي"
+
+#: /content/amp-dev/index-2021.html:20
+msgid "Export Import Data"
+msgstr "تصدير بيانات الاستيراد"
+
+#: /content/amp-dev/index-2021.html:21
+msgid "Creating electronic Product Passports for presentation to government organizations administering border control policies and tariffs."
+msgstr "إنشاء جوازات سفر إلكترونية للمنتجات لعرضها على المنظمات الحكومية التي تدير سياسات وتعريفات مراقبة الحدود."
+
+#: /content/amp-dev/index-2021.html:22
+msgid "All about Export Import Data"
+msgstr "كل شيء عن تصدير بيانات الاستيراد"
+
+#: /content/amp-dev/index-2021.html:25
+msgid "Daily Care"
+msgstr "العناية اليومية"
+
+#: /content/amp-dev/index-2021.html:26
+msgid "Serving detailed information about cosmetics, textiles, and household chemicals in machine&#x2010;readable format. Storing exposure and contact history in your personal Biograph."
+msgstr "تقديم معلومات تفصيلية حول مستحضرات التجميل والمنسوجات والمواد الكيميائية المنزلية بتنسيق يمكن قراءته آليًا. تخزين تاريخ التعرض والاتصال في سيرتك الذاتية الشخصية."
+
+#: /content/amp-dev/index-2021.html:27
+msgid "All about Daily Care"
+msgstr "كل شيء عن العناية اليومية"
+
+#: /content/amp-dev/index-2021.html:30
+msgid "Food Data Institute"
+msgstr "معهد بيانات الغذاء"
+
+#: /content/amp-dev/index-2021.html:31
+msgid "Developing data specifications for food & agriculture. Serving repositories for recording and comparing research data and discovering new solutions."
+msgstr "تطوير مواصفات البيانات الخاصة بالأغذية والزراعة. خدمة مستودعات لتسجيل ومقارنة بيانات البحث واكتشاف حلول جديدة."
+
+#: /content/amp-dev/index-2021.html:32
+msgid "All about Food Data Institute"
+msgstr "كل شيء عن معهد بيانات الغذاء"
+
+#: /content/amp-dev/index-2021.html:35
+msgid "Ontomatica"
+msgstr "أوتوماتيكا"
+
+#: /content/amp-dev/index-2021.html:36
+msgid "Creating machine-readable information about foods, drugs, cosmetics, textiles, chemicals and commodities for selling in local, national and international markets."
+msgstr "إنشاء معلومات يمكن قراءتها آليًا حول الأطعمة والأدوية ومستحضرات التجميل والمنسوجات والمواد الكيميائية والسلع لبيعها في الأسواق المحلية والوطنية والدولية."
+
+#: /content/amp-dev/index-2021.html:37
+msgid "All about Ontomatica"
+msgstr "كل شيء عن أونتوماتيكا"
+
+#: /content/amp-dev/index-2021.html:42
+msgid "Simplify development of knowledge graph applications"
+msgstr "تبسيط تطوير تطبيقات الرسم البياني المعرفي"
+
+#: /content/amp-dev/index-2021.html:43
+msgid "Develop applications using structured data and functional programming. Share data using curated data definitions and datasets. Improve dataset quality using visualization and machine-reasoning. Keep everything synchronized using Plato (Platform for ontologies)."
+msgstr "تطوير التطبيقات باستخدام البيانات المنظمة والبرمجة الوظيفية. مشاركة البيانات باستخدام تعريفات البيانات المنسقة ومجموعات البيانات. تحسين جودة مجموعة البيانات باستخدام التصور والتفكير الآلي. حافظ على مزامنة كل شيء باستخدام Plato (منصة الأنطولوجيات)."
+
+#: /content/amp-dev/index-2021.html:45
+msgid "Monitor food & drug biochemistry"
+msgstr "مراقبة الكيمياء الحيوية للأغذية والأدوية"
+
+#: /content/amp-dev/index-2021.html:46
+msgid "Monitor component intake over days, weeks, months, and years using electronic data about food and drugs. Query composition and formulation information that is not available on printed labels. Pet owners monitor food and medicine for their companions. Determine links between food intake and health outcomes."
+msgstr "مراقبة تناول المكونات على مدار الأيام والأسابيع والشهور والسنوات باستخدام البيانات الإلكترونية حول الغذاء والدواء. تكوين الاستعلام ومعلومات الصياغة غير المتوفرة على التسميات المطبوعة. يقوم أصحاب الحيوانات الأليفة بمراقبة الغذاء والدواء لأصحابهم. تحديد الروابط بين تناول الطعام والنتائج الصحية."
+
+#: /content/amp-dev/index-2021.html:48
+msgid "Monitor cosmetics, textile & household chemical biochemistry"
+msgstr "مراقبة مستحضرات التجميل والمنسوجات والكيمياء الحيوية الكيميائية المنزلية"
+
+#: /content/amp-dev/index-2021.html:49
+msgid "Monitor use and exposure to components over days, weeks, months, and years using electronic data about cosmetics, textiles and household chemicals. Query chemical and fiber information that is not available on a printed label. Determine links between use/exposure and health outcomes."
+msgstr "مراقبة الاستخدام والتعرض للمكونات على مدار الأيام والأسابيع والشهور والسنوات باستخدام البيانات الإلكترونية حول مستحضرات التجميل والمنسوجات والمواد الكيميائية المنزلية. الاستعلام عن المعلومات الكيميائية والألياف غير المتوفرة على الملصق المطبوع. تحديد الروابط بين الاستخدام/التعرض والنتائج الصحية."
+
+#: /content/amp-dev/index-2021.html:51
+msgid "Define product identity and impede counterfeits"
+msgstr "تحديد هوية المنتج ومنع التزوير"
+
+#: /content/amp-dev/index-2021.html:52
+msgid "Use electronic product identity to impede counterfeit products and claims. Create a new label by combining existing labels and adding new information. Improve machine-automation by using structured data to control machine-operations. Example: agriculture equipment calibrated by chemical formulations and environmental conditions."
+msgstr "استخدام هوية المنتج الإلكتروني لعرقلة المنتجات والمطالبات المقلدة. أنشئ تصنيفًا جديدًا من خلال دمج التصنيفات الموجودة وإضافة معلومات جديدة. تحسين أتمتة الماكينة باستخدام البيانات المنظمة للتحكم في عمليات الماكينة. مثال: معدات زراعية تمت معايرتها حسب التركيبات الكيميائية والظروف البيئية."
+
+#: /content/amp-dev/index-2021.html:54
+msgid "Be a friend to Authorities"
+msgstr "كن صديقًا للسلطات"
+
+#: /content/amp-dev/index-2021.html:55
+msgid "Product Passport is an electronic companion to paper documents such as an Invoice, Bill of Lading, and Material Safety Data Sheet. Authorities have specific local rules and tariffs. Examples: USA/California, European Union, Great Britain, Saudi Arabia, India. Product Passport enables automated verification of global and local rules for imports and exports."
+msgstr "يعد Product Passport بمثابة رفيق إلكتروني للمستندات الورقية مثل الفاتورة وبوليصة الشحن وورقة بيانات سلامة المواد. السلطات لديها قواعد وتعريفات محلية محددة. أمثلة: الولايات المتحدة الأمريكية/كاليفورنيا، الاتحاد الأوروبي، بريطانيا العظمى، المملكة العربية السعودية، الهند. يتيح Product Passport التحقق الآلي من القواعد العالمية والمحلية للواردات والصادرات."
+
+#: /content/amp-dev/index-2021.html:57
+msgid "Open standards & open data research"
+msgstr "المعايير المفتوحة وأبحاث البيانات المفتوحة"
+
+#: /content/amp-dev/index-2021.html:58
+msgid "Transform data from individual scientific studies into shared data repositories. Discover new solutions by comparing data from multiple studies. National organizations synchronize local and international research. Example: FDI-USA shares data with FDI-CAN (Canada), FDI-GBR (Great Britain), FDI-SAU (Saudi Arabia), FDI-IND (India), and others."
+msgstr "تحويل البيانات من الدراسات العلمية الفردية إلى مستودعات بيانات مشتركة. اكتشف حلولاً جديدة من خلال مقارنة البيانات من دراسات متعددة. تقوم المنظمات الوطنية بمزامنة الأبحاث المحلية والدولية. على سبيل المثال: تشارك FDI-USA البيانات مع FDI-CAN (كندا)، وFDI-GBR (بريطانيا العظمى)، وFDI-SAU (المملكة العربية السعودية)، وFDI-IND (الهند)، وغيرها."
+
+#: /content/amp-dev/index-2021.html:163
+msgid " New technology should aspire to accomplish two goals:"
+msgstr "يجب أن تطمح التكنولوجيا الجديدة إلى تحقيق هدفين:"
+
+#: /content/amp-dev/index-2021.html:165
+msgid " Take an existing business process and significantly reduce its total cost of implementation."
+msgstr "خذ عملية تجارية حالية وقلل بشكل كبير من التكلفة الإجمالية للتنفيذ."
+
+#: /content/amp-dev/index-2021.html:168
+msgid " Develop new, productive habits among consumers."
+msgstr "تنمية عادات إنتاجية جديدة لدى المستهلكين."
+
+#: /content/amp-dev/index-2021.html:171
+msgid " Consortium members aspire to accomplish both goals."
+msgstr "ويطمح أعضاء الكونسورتيوم إلى تحقيق كلا الهدفين."
+
+#: /content/amp-dev/index-2021.html:227
+msgid " Learn more about knowledge graph applications"
+msgstr "تعرف على المزيد حول تطبيقات الرسم البياني المعرفي"
+
+#: /content/amp-dev/index-2021.html:228
+msgid " Read case studies from industry, science and government."
+msgstr "اقرأ دراسات الحالة من الصناعة والعلوم والحكومة."
+
+#: /content/amp-dev/index-2021.html:232
+msgid " See all case studies"
+msgstr "اطلع على جميع دراسات الحالة"
