--- a/pages/translations/pt_BR/LC_MESSAGES/messages.po
+++ b/pages/translations/pt_BR/LC_MESSAGES/messages.po
@@ -3189,3 +3189,156 @@ msgstr "Agora é hora de ação."
 
 msgid "The sun is a star."
 msgstr "O Sol é uma estrela."
+
+#: /content/amp-dev/index-2021.html:2
+msgid "Knowledge graph applications"
+msgstr "Aplicativos de gráfico de conhecimento"
+
+#: /content/amp-dev/index-2021.html:10
+msgid "Electronic Labels"
+msgstr "Etiquetas Eletrônicas"
+
+#: /content/amp-dev/index-2021.html:11
+msgid "Creating electronic labels with detailed product information in machine-readable format for humans & other intelligent machines."
+msgstr "Criação de etiquetas eletrônicas com informações detalhadas do produto em formato legível por máquinas para humanos e outras máquinas inteligentes."
+
+#: /content/amp-dev/index-2021.html:12
+msgid "All about Electronic Labels"
+msgstr "Tudo sobre Etiquetas Eletrônicas"
+
+#: /content/amp-dev/index-2021.html:15
+msgid "Daily Food"
+msgstr "Alimentação Diária"
+
+#: /content/amp-dev/index-2021.html:16
+msgid "Serving detailed information about human food and meals, pet food and animal feed in machine-readable format. Storing intake history in your personal Biograph - companion to your Electronic Health Record."
+msgstr "Servindo informações detalhadas sobre alimentação humana e refeições, rações para animais de estimação e rações para animais em formato legível por máquina. Armazenar histórico de ingestão em sua biografia pessoal - companheiro de seu Registro Eletrônico de Saúde."
+
+#: /content/amp-dev/index-2021.html:17
+msgid "All about Daily Food"
+msgstr "Tudo sobre alimentação diária"
+
+#: /content/amp-dev/index-2021.html:20
+msgid "Export Import Data"
+msgstr "Exportar dados de importação"
+
+#: /content/amp-dev/index-2021.html:21
+msgid "Creating electronic Product Passports for presentation to government organizations administering border control policies and tariffs."
+msgstr "Criação de passaportes eletrônicos de produtos para apresentação a organizações governamentais que administram políticas e tarifas de controle de fronteiras."
+
+#: /content/amp-dev/index-2021.html:22
+msgid "All about Export Import Data"
+msgstr "Tudo sobre Exportar Dados de Importação"
+
+#: /content/amp-dev/index-2021.html:25
+msgid "Daily Care"
+msgstr "Cuidado diário"
+
+#: /content/amp-dev/index-2021.html:26
+msgid "Serving detailed information about cosmetics, textiles, and household chemicals in machine&#x2010;readable format. Storing exposure and contact history in your personal Biograph."
+msgstr "Fornecendo informações detalhadas sobre cosméticos, têxteis e produtos químicos domésticos em formato legível por máquina. Armazenando exposição e histórico de contato em sua biografia pessoal."
+
+#: /content/amp-dev/index-2021.html:27
+msgid "All about Daily Care"
+msgstr "Tudo sobre cuidados diários"
+
+#: /content/amp-dev/index-2021.html:30
+msgid "Food Data Institute"
+msgstr "Instituto de dados alimentares"
+
+#: /content/amp-dev/index-2021.html:31
+msgid "Developing data specifications for food & agriculture. Serving repositories for recording and comparing research data and discovering new solutions."
+msgstr "Desenvolvimento de especificações de dados para alimentos e agricultura. Servindo repositórios para registrar e comparar dados de pesquisa e descobrir novas soluções."
+
+#: /content/amp-dev/index-2021.html:32
+msgid "All about Food Data Institute"
+msgstr "Tudo sobre o Instituto de Dados Alimentares"
+
+#: /content/amp-dev/index-2021.html:35
+msgid "Ontomatica"
+msgstr "Ontomatica"
+
+#: /content/amp-dev/index-2021.html:36
+msgid "Creating machine-readable information about foods, drugs, cosmetics, textiles, chemicals and commodities for selling in local, national and international markets."
+msgstr "Criação de informações legíveis por máquina sobre alimentos, medicamentos, cosméticos, têxteis, produtos químicos e commodities para venda em mercados locais, nacionais e internacionais."
+
+#: /content/amp-dev/index-2021.html:37
+msgid "All about Ontomatica"
+msgstr "Tudo sobre Ontomatica"
+
+#: /content/amp-dev/index-2021.html:42
+msgid "Simplify development of knowledge graph applications"
+msgstr "Simplifique o desenvolvimento de aplicativos de gráfico de conhecimento"
+
+#: /content/amp-dev/index-2021.html:43
+msgid "Develop applications using structured data and functional programming. Share data using curated data definitions and datasets. Improve dataset quality using visualization and machine-reasoning. Keep everything synchronized using Plato (Platform for ontologies)."
+msgstr "Desenvolva aplicativos usando dados estruturados e programação funcional. Compartilhe dados usando definições e conjuntos de dados selecionados. Melhore a qualidade do conjunto de dados usando visualização e raciocínio de máquina. Mantenha tudo sincronizado usando Plato (Plataforma para ontologias)."
+
+#: /content/amp-dev/index-2021.html:45
+msgid "Monitor food & drug biochemistry"
+msgstr "Monitore a bioquímica de alimentos e medicamentos"
+
+#: /content/amp-dev/index-2021.html:46
+msgid "Monitor component intake over days, weeks, months, and years using electronic data about food and drugs. Query composition and formulation information that is not available on printed labels. Pet owners monitor food and medicine for their companions. Determine links between food intake and health outcomes."
+msgstr "Monitore a ingestão de componentes ao longo de dias, semanas, meses e anos usando dados eletrônicos sobre alimentos e medicamentos. Consulte informações de composição e formulação que não estão disponíveis nos rótulos impressos. Os donos de animais monitoram alimentos e remédios para seus companheiros. Determine as ligações entre a ingestão de alimentos e os resultados de saúde."
+
+#: /content/amp-dev/index-2021.html:48
+msgid "Monitor cosmetics, textile & household chemical biochemistry"
+msgstr "Monitore a bioquímica de cosméticos, têxteis e produtos químicos domésticos"
+
+#: /content/amp-dev/index-2021.html:49
+msgid "Monitor use and exposure to components over days, weeks, months, and years using electronic data about cosmetics, textiles and household chemicals. Query chemical and fiber information that is not available on a printed label. Determine links between use/exposure and health outcomes."
+msgstr "Monitore o uso e a exposição a componentes ao longo de dias, semanas, meses e anos usando dados eletrônicos sobre cosméticos, têxteis e produtos químicos domésticos. Consulte informações químicas e de fibras que não estão disponíveis em uma etiqueta impressa. Determinar ligações entre uso/exposição e resultados de saúde."
+
+#: /content/amp-dev/index-2021.html:51
+msgid "Define product identity and impede counterfeits"
+msgstr "Defina a identidade do produto e impeça falsificações"
+
+#: /content/amp-dev/index-2021.html:52
+msgid "Use electronic product identity to impede counterfeit products and claims. Create a new label by combining existing labels and adding new information. Improve machine-automation by using structured data to control machine-operations. Example: agriculture equipment calibrated by chemical formulations and environmental conditions."
+msgstr "Use a identidade eletrônica do produto para impedir reclamações e produtos falsificados. Crie uma nova etiqueta combinando etiquetas existentes e adicionando novas informações. Melhore a automação de máquinas usando dados estruturados para controlar as operações das máquinas. Exemplo: equipamentos agrícolas calibrados por formulações químicas e condições ambientais."
+
+#: /content/amp-dev/index-2021.html:54
+msgid "Be a friend to Authorities"
+msgstr "Seja amigo das autoridades"
+
+#: /content/amp-dev/index-2021.html:55
+msgid "Product Passport is an electronic companion to paper documents such as an Invoice, Bill of Lading, and Material Safety Data Sheet. Authorities have specific local rules and tariffs. Examples: USA/California, European Union, Great Britain, Saudi Arabia, India. Product Passport enables automated verification of global and local rules for imports and exports."
+msgstr "O Product Passport é um complemento eletrônico para documentos em papel, como fatura, conhecimento de embarque e ficha de dados de segurança de material. As autoridades têm regras e tarifas locais específicas. Exemplos: EUA/Califórnia, União Europeia, Grã-Bretanha, Arábia Saudita, Índia. O Product Passport permite a verificação automatizada de regras globais e locais para importações e exportações."
+
+#: /content/amp-dev/index-2021.html:57
+msgid "Open standards & open data research"
+msgstr "Padrões abertos e pesquisa de dados abertos"
+
+#: /content/amp-dev/index-2021.html:58
+msgid "Transform data from individual scientific studies into shared data repositories. Discover new solutions by comparing data from multiple studies. National organizations synchronize local and international research. Example: FDI-USA shares data with FDI-CAN (Canada), FDI-GBR (Great Britain), FDI-SAU (Saudi Arabia), FDI-IND (India), and others."
+msgstr "Transforme dados de estudos científicos individuais em repositórios de dados compartilhados. Descubra novas soluções comparando dados de vários estudos. As organizações nacionais sincronizam a investigação local e internacional. Exemplo: FDI-USA partilha dados com FDI-CAN (Canadá), FDI-GBR (Grã-Bretanha), FDI-SAU (Arábia Saudita), FDI-IND (Índia) e outros."
+
+#: /content/amp-dev/index-2021.html:163
+msgid " New technology should aspire to accomplish two goals:"
+msgstr "A nova tecnologia deve aspirar a atingir dois objetivos:"
+
+#: /content/amp-dev/index-2021.html:165
+msgid " Take an existing business process and significantly reduce its total cost of implementation."
+msgstr "Pegue um processo de negócios existente e reduza significativamente seu custo total de implementação."
+
+#: /content/amp-dev/index-2021.html:168
+msgid " Develop new, productive habits among consumers."
+msgstr "Desenvolva hábitos novos e produtivos entre os consumidores."
+
+#: /content/amp-dev/index-2021.html:171
+msgid " Consortium members aspire to accomplish both goals."
+msgstr "Os membros do consórcio aspiram atingir ambos os objetivos."
+
+#: /content/amp-dev/index-2021.html:227
+msgid " Learn more about knowledge graph applications"
+msgstr "Saiba mais sobre aplicativos de gráfico de conhecimento"
+
+#: /content/amp-dev/index-2021.html:228
+msgid " Read case studies from industry, science and government."
+msgstr "Leia estudos de caso da indústria, ciência e governo."
+
+#: /content/amp-dev/index-2021.html:232
+msgid " See all case studies"
+msgstr "Veja todos os estudos de caso"
+
